--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,19 @@
   src: url("black_jack.ttf") format("truetype");
 }
 body {
-  background-color: #cee6db;
-  color: Black;
+  background-color: #f8989c;
+  color: #fff;
+}
+body a {
+  color: #fff;
+}
+body .quick_fix {
+  min-height: 50px;
 }
 body span.element {
   font-size: 30px;
   margin: 20px 0;
-  min-hieght: 100px;
+  min-height: 100px;
 }
 body main_content {
   margin: auto;
@@ -20,6 +26,16 @@ body #logo {
 }
 body .written_text {
   font-size: 20px;
+}
+body .curved_corners {
+  border-radius: 30px;
+}
+body .white_row {
+  color: #f8989c;
+  background-color: #fff;
+}
+body .white_row a {
+  color: #f8989c;
 }
 div {
   margin: 10px;
